--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ a {
 
 .wrapper {
   margin: 0 auto;
-  max-width: 1170px;
+  max-width: 1174px;
   padding: 0 15px;
 }
 
@@ -199,7 +199,7 @@ a {
   background: none repeat scroll 0 0 #212121;
   color: $a-default-color;
   height: 17px;
-  padding: 12px 0;
+  padding: 12px 0 15px 0;
 
   a {
     color: $a-default-color;
@@ -213,19 +213,20 @@ a {
     color: $default-color-pink;
   }
 
-  i {
-    font-size: 17px;
-    margin-right: 7px;
-  }
-
   .part-section {
     float: left;
     padding-bottom: -8px;
+    padding-top: 2px;
     width: 50%;
+      
+    .delivery-icon {
+      padding-right: 10px;
+      margin-top: -2px;
+    }
 
     img {
       float: left;
-      margin-right: 10px;
+      margin-top: 2px;
     }
 
     p {
@@ -233,14 +234,26 @@ a {
       float: left;
       font-size: 12px;
       font-weight: 400;
+      margin-right: 25px;
     }
 
     .language-list {
       display: inline-block;
       float: left;
       font-size: 12px;
-      margin: 0 15px;
+      margin: 0 40px 0 10px;
+      position: relative;
     }
+      
+    .language-list::after {
+      border: 5px solid transparent;
+      border-left: 5px solid $a-default-color;
+      content: ''; 
+      position: absolute;
+      right: -14px; 
+      top: 4px;
+      transform: rotate(90deg);
+   }
   }
 }
 
@@ -249,7 +262,7 @@ a {
 .header-level-two {
   color: $a-default-color;
   height: 32px;
-  padding: 40px 0;
+  padding: 45px 0 34px 0;
 
   a {
     color: $default-color-black;
@@ -268,15 +281,33 @@ a {
   .search-wrapper {
     float: left;
     width: 25%;
+      
+    a {
+      font-size: 20px;      
+    }
 
     input[type='text'] {
       background: none repeat scroll 0 0 $body-default-color;
       border: medium none;
       color: #000;
-      font-weight: 500;
-      margin-left: 13px;
-      padding-left: 10px;
-      padding-top: 3px;
+      display: inline-block;
+      font-size: 12px;
+      font-weight: 550;
+      margin-left: 7px;
+      text-transform: uppercase;
+    }
+      
+    ::-webkit-input-placeholder {
+      color:#000;
+    }
+    ::-moz-placeholder {
+      color:#000;
+    }
+    :-moz-placeholder {
+      color:#000;
+    }
+    :-ms-input-placeholder {
+      color:#000;
     }
   }
 
@@ -294,13 +325,15 @@ a {
     li {
       display: inline-block;
       float: right;
-      margin: 0 10px;
+      font-size: 12px;
+      font-weight: 550;
+      margin-left: 30px;
     }
 
     .comments-count {
       background: url('../images/header-level-two/wishlist_bg.png') no-repeat scroll 0 0 rgba(0, 0, 0, 0);
       height: 22px;
-      left: 76px;
+      left: 86px;
       position: absolute;
       text-align: center;
       top: -23px;
@@ -318,7 +351,7 @@ a {
 .header-level-three {
   background: none repeat scroll 0 0 $default-color-pink;
   color: $a-default-color;
-  height: 66px;
+  height: 60px;
 
   a {
     color: $default-color-white;
@@ -329,9 +362,9 @@ a {
 .menu-left {
   background: none repeat scroll 0 0 #f06160;
   float: left;
-  padding: 23px 0;
+  padding: 20px 0;
   position: relative;
-  width: 17%;
+  width: 16.2%;
 
   a {
     margin: auto 5px;
@@ -342,7 +375,7 @@ a {
   }
 
   .fa-bars {
-    margin-left: 65px;
+    margin-left: 52px;
   }
 
   .cat-menu {
@@ -350,7 +383,7 @@ a {
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
     display: 0;
     position: absolute;
-    width: 290px;
+    width: 280px;
     z-index: 1;
 
     a {
@@ -362,12 +395,13 @@ a {
 
   .menu-list {
     color: $default-color-pink;
+    font-size: 12px;
     list-style: disc;
-    margin: 12px 0;
-    margin-left: 35px;
+    margin: 5px 0;
+    margin-left: 32px;
 
     li {
-      padding: 10px 0;
+      padding: 13px 0;
       position: relative;
     }
 
@@ -377,8 +411,8 @@ a {
       height: 1px;
       left: -15px;
       position: absolute;
-      top: 40px;
-      width: 250px;
+      top: 42px;
+      width: 240px;
     }
 
     li:last-child::after {
@@ -387,7 +421,7 @@ a {
   }
 
   .shirts-button li {
-    margin-left: 35px;
+    margin-left: 32px;
   }
 
   .shirts-button:hover .shirts-menu {
@@ -396,13 +430,13 @@ a {
 
   .category-menu {
     display: none;
-    top: 66px;
+    top: 60px;
   }
 
   .shirts-menu {
     display: none;
-    left: 220px;
-    top: -12px;
+    left: 216px;
+    top: -6px;
   }
 }
 
@@ -414,15 +448,15 @@ a {
   border-top: 5px solid $body-default-color;
   float: left;
   height: 61px;
-  width: 66%;
+  padding: 0 4.2% ;
+  width: 59.1%;
 
   li {
     display: inline-block;
     float: left;
-    padding: 18px 3px 23px 2px;
+    padding: 17px 4.4% 24px 4.3%;
     position: relative;
     text-align: center;
-    width: 16%;
   }
 
   li:hover::before {
@@ -439,24 +473,31 @@ a {
 .menu-right {
   background: none repeat scroll 0 0 #f06160;
   float: left;
-  padding: 23px 0;
+  padding: 18px 0 17px;
   position: relative;
-  width: 17%;
+  width: 16.2%;
 
   a > img {
     float: left;
     margin-left: 30px;
     margin-right: 10px;
+    padding-bottom: 5px;
+  }
+    
+  a > span {
+    display: inline-block;
+    padding-top: 3px;
   }
 
   .cart-menu {
     background-color: #f9f9f9;
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
     display: none;
-    left: -142px;
+    font-size: 12px;
+    left: -144px;
     position: absolute;
-    top: 66px;
-    width: 340px;
+    top: 60px;
+    width: 334px;
     z-index: 1;
 
     a {
@@ -465,24 +506,21 @@ a {
   }
 
   .cart-item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    height: 90px;
-    padding: 14px;
+    height: 76px;
+    padding: 19px;
     padding-right: 50px;
+    position: relative;
 
     .item-left {
       float: left;
-      width: 37%;
-
-      img {
-        border: 1px solid rgba(0, 0, 0, 0.2);
-      }
+      width: 38%;
     }
 
     .item-right {
       float: left;
+      padding: 3%;
       position: relative;
-      width: 63%;
+      width: 56%;
 
       h5 {
         font-weight: bold;
@@ -496,18 +534,28 @@ a {
       .close-icon {
         color: $default-color-black;
         height: 14px;
-        left: 195px;
+        left: 175px;
         position: absolute;
         text-align: center;
-        top: 0;
+        top: 8px;
         width: 14px;
       }
     }
   }
+    
+  .cart-item::after {
+    background-color: rgba(0, 0, 0, 0.2);
+    content: '';
+    height: 1px;
+    left: 20px;
+    position: absolute;
+    top: 115px;
+    width: 292px;
+  }
 
   .cart-total {
     height: 20px;
-    margin: 15px;
+    margin: 18px 20px 20px;
 
     p {
       color: $default-color-black;
@@ -535,12 +583,13 @@ a {
       background: none repeat scroll 0 0 $default-color-pink;
       float: left;
       height: 20px;
-      padding: 10px 0;
+      padding: 12px 0;
       text-align: center;
       width: 50%;
 
       a {
         color: $a-default-color;
+          font-size: 14px;
       }
     }
 
@@ -558,10 +607,10 @@ a {
 
 .banner {
   background-image: url('../images/banner/banner_bg.png');
-  height: 500px;
+  height: 650px;
 
   .description-left {
-    padding: 110px 0;
+    padding: 200px 0;
     position: relative;
     width: 50%;
 
@@ -610,33 +659,38 @@ a {
   .offer-tag {
     background: url('../images/banner/circle.png') no-repeat scroll 0 0 rgba(0, 0, 0, 0);
     height: 106px;
-    left: 92%;
+    left: 95.6%;
     position: absolute;
     text-align: center;
-    top: 20%;
-    width: 103px;
+    top: 24.7%;
+    width: 106px;
 
     .text {
       display: block;
-      margin: 26%;
-      width: 40%;
+      font-size: 15px;
+      margin: 24% 23%;
+      width: 42%;
 
       span {
         color: $default-color-white;
         display: block;
         font-weight: bold;
       }
+        
+      .discount {
+        font-size: 17px;  
+      }
     }
   }
 
   .offer-tag::before {
-    border-left: 2px solid #d1d1d1;
+    border-left: 1px solid #d1d1d1;
     content: '';
     display: inline-block;
-    height: 98%;
+    height: 159%;
     left: 44%;
     position: absolute;
-    top: -80%;
+    top: -141%;
   }
 }
 
