--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,17 +45,18 @@ a {
 .multi-line {
   border-bottom: 2px solid $default-color-pink;
   border-top: 1px solid $default-color-pink;
-  height: 5px;
-  margin: 0 auto 20px;
+  height: 2px;
+  margin: 5px auto 27px;
   width: 40px;
 }
 
 .button {
   background-color: transparent;
-  border: 3px solid $default-color-pink;
+  border: 2px solid $default-color-pink;
   float: left;
+  font-size: 12px;
   height: 20px;
-  padding: 10px 15px;
+  padding: 8px 15px;
   text-align: center;
 
   a {
@@ -73,16 +74,16 @@ a {
 }
 
 .my-slide {
-  height: 430px;
+  height: 445px;
 
   .item {
     background-color: $default-color-white;
     float: left;
     height: inherit;
-    margin: 15px;
+    margin: 1%;
     position: relative;
     text-align: center;
-    width: 260px;
+    width: 270px;
 
     .item-image {
       position: relative;
@@ -119,20 +120,31 @@ a {
     li {
       border-right: 1px solid $default-color-gainsboro;
       display: inline-block;
-      padding: 2px 7px;
+      padding: 2px 11px 2px 7px;
+      position: relative;
 
       a {
         color: $default-color-black;
+      }        
+        
+      .tr-text {
+        font-size: 11px;
+        font-weight: 500;
       }
-    }
-
-    li:first-child {
-      border-right: 0;
-      padding-right: 0;
     }
 
     li:last-child {
       border-right: 0;
+    }
+      
+    li:hover::before {
+      background-color: $default-color-black;
+      content: '';
+      height: 5px;
+      left: 0;
+      position: absolute;
+      top: -5px;
+      width: 100%;
     }
   }
 
@@ -142,12 +154,17 @@ a {
     font-weight: bold;
     left: 15px;
     position: absolute;
-    top: 15px;
+    top: 20px;
 
     p {
       background-color: $default-color-pink;
       color: $default-color-white;
-      padding: 2px 10px;
+      padding: 2px 11px;
+    }
+      
+    span {
+       display: block;
+       margin: 4px auto;
     }
   }
 
@@ -165,7 +182,7 @@ a {
 }
 
 .dots-section {
-  left: 50%;
+  left: 50.4%;
   margin-left: -26%;
   padding-left: 7px;
   position: absolute;
@@ -175,11 +192,11 @@ a {
   .dot {
     background-color: #ddd;
     border: 1px solid #ddd;
-    border-radius: 6px;
+    border-radius: 5px;
     cursor: pointer;
     display: inline-block;
     height: 6px;
-    margin: 1px;
+    margin: 0 4px;
     text-indent: -999px;
     width: 6px;
   }
@@ -187,9 +204,6 @@ a {
   .active {
     background-color: $default-color-pink;
     border: 1px solid $default-color-pink;
-    height: 8px;
-    margin: 0;
-    width: 8px;
   }
 }
 
@@ -215,9 +229,12 @@ a {
 
   .part-section {
     float: left;
-    padding-bottom: -8px;
     padding-top: 2px;
     width: 50%;
+      
+    .float-right {
+	  margin-right: 5px;
+    }
       
     .delivery-icon {
       padding-right: 10px;
@@ -313,6 +330,8 @@ a {
 
   .logo {
     float: left;
+    margin-left: -3px;
+    margin-top: -2px;
     text-align: center;
     width: 50%;
   }
@@ -333,10 +352,10 @@ a {
     .comments-count {
       background: url('../images/header-level-two/wishlist_bg.png') no-repeat scroll 0 0 rgba(0, 0, 0, 0);
       height: 22px;
-      left: 86px;
+      left: 82px;
       position: absolute;
       text-align: center;
-      top: -23px;
+      top: -24px;
       width: 26px;
 
       span {
@@ -659,10 +678,10 @@ a {
   .offer-tag {
     background: url('../images/banner/circle.png') no-repeat scroll 0 0 rgba(0, 0, 0, 0);
     height: 106px;
-    left: 95.6%;
+    left: 95.5%;
     position: absolute;
     text-align: center;
-    top: 24.7%;
+    top: 24.5%;
     width: 106px;
 
     .text {
@@ -687,22 +706,22 @@ a {
     border-left: 1px solid #d1d1d1;
     content: '';
     display: inline-block;
-    height: 159%;
-    left: 44%;
+    height: 158%;
+    left: 43.6%;
     position: absolute;
-    top: -141%;
+    top: -140%;
   }
 }
 
 //-----------FEATURES------------
 
 .features {
-  height: 80px;
+  height: 76px;
   padding-top: 36px;
   position: relative;
 
   .wrapper::after {
-    border-bottom: 2px dotted #999;
+    border-bottom: 1px dotted #999;
     bottom: -2px;
     content: '';
     left: 7%;
@@ -711,33 +730,43 @@ a {
   }
 
   li {
+    border-right: 1px solid #d1d1d1;
     display: block;
     float: left;
+    font-size: 11px;
     height: 40px;
-    width: 25%;
+    padding: 0 4.6%;
+    width: 18%;
 
     img {
       float: left;
-      height: 40px;
-      margin-right: 10px;
+      height: 42px;
+      margin-right: 20px;
     }
 
-    p {
+    span {
+      display: block;
       font-weight: bold;
-      padding-right: 20px;
+      padding-top: 5px;
     }
+  }
+    
+  li:first-child {
+      padding-left: 0;
   }
 
   li:last-child {
-
-    p {
-      padding-top: 10px;
-    }
+      border-right: none;
+      padding-right: 0;
+      
+      span {
+        padding-top: 13px;
+      }
   }
 }
 
 .features::after {
-  border-bottom: 2px dotted #999;
+  border-bottom: 1px dotted #999;
   bottom: 1px;
   content: '';
   left: 7%;
@@ -748,7 +777,7 @@ a {
 //-----------TRENDING CLOTHING------------
 
 .trending-clothing {
-  padding: 95px 0;
+  padding: 63px 0;
 
   .description > span {
     display: block;
@@ -781,12 +810,13 @@ a {
     }
 
     .dots-section {
-      top: 540px;
+      top: 563px;
     }
   }
 
   .my-slides {
-    height: 430px;
+    height: 445px;
+    padding-bottom: 7.8%;
 
     .my-slide {
       display: none;
@@ -801,7 +831,7 @@ a {
 //-----------PROMOTION------------
 
 .promotion {
-  height: 320px;
+  height: 470px;
 
   .collumn {
     background-color: #f2f4f5;
@@ -822,11 +852,12 @@ a {
     }
 
     span.with-border {
-      border-bottom: 2px solid #d1d1d1;
-      border-top: 2px solid #d1d1d1;
+      border-bottom: 1px solid #d1d1d1;
+      border-top: 1px solid #d1d1d1;
       display: inline-block;
+      font-size: 11px;
       margin: 30px 0;
-      padding: 0 4px;
+      padding: 5px 4px;
       position: static;
     }
 
@@ -834,14 +865,24 @@ a {
       display: inline-block;
       float: left;
       height: 200px;
-      margin-bottom: 60px;
-      margin-left: 50px;
-      margin-top: 60px;
+      margin-bottom: 91px;
+      margin-left: 0px;
+      margin-top: 179px;
       text-align: center;
-      width: 60%;
+      width: 51%;
+        
+      span.color-pink {
+        margin-bottom: -6px;
+      }
+        
+      span.with-border {
+        margin: 21px 0 29px 0;
+      }
 
       .button {
-        margin: 0 35%;
+        font-size: 11px;
+        margin: 0 33%;
+        padding: 12px 23px 5px;
       }
     }
 
@@ -849,14 +890,21 @@ a {
       display: inline-block;
       float: right;
       height: 200px;
-      margin-bottom: 60px;
-      margin-right: 50px;
-      margin-top: 60px;
+      margin-bottom: 92px;
+      margin-right: 0px;
+      margin-top: 178px;
       text-align: center;
-      width: 60%;
+      width: 51%;
+        
+      span.with-border {
+        margin: 15px 0 34px 0;
+      }
 
       .button {
-        margin: 0 29%;
+        border: 2px solid $default-color-pink;
+        font-size: 11px;
+        margin: 0 26%;
+        padding: 12px 23px 6px;
       }
     }
   }
@@ -869,7 +917,7 @@ a {
 //-----------FEATURED PRODUCTS------------
 
 .featured-products {
-  padding: 95px 0;
+  padding: 92px 0;
 
   .description > span {
     display: block;
@@ -879,6 +927,11 @@ a {
 
   .description .name {
     font-size: 26px;
+    margin-bottom: -4px;
+  }
+    
+  .description .multi-line {
+    margin-bottom: 25px;
   }
 
   .content {
@@ -887,7 +940,7 @@ a {
     .select {
       display: block;
       font-weight: bold;
-      margin-bottom: 42px;
+      margin-bottom: 47px;
       text-align: center;
 
       a {
@@ -900,14 +953,14 @@ a {
         color: $default-color-black;
       }
     }
-
-    .dots-section {
-      top: 540px;
-    }
   }
 
   .my-slides {
-    height: 860px;
+    height: 947px;
+  }
+    
+  .my-slide:nth-child(2) {
+    margin-top: 40px;
   }
 }
 
@@ -915,7 +968,7 @@ a {
 
 .blog {
   background-color: #f2f4f5;
-  padding: 95px 0;
+  padding: 92px 0;
 
   .description > span {
     display: block;
@@ -926,6 +979,10 @@ a {
   .description .name {
     font-size: 26px;
   }
+    
+  .description .multi-line {
+    margin-bottom: 31px;
+  }
 
   .content {
     position: relative;
@@ -934,13 +991,13 @@ a {
   .select {
     display: block;
     height: 30px;
-    margin-bottom: 42px;
+    margin-bottom: 52px;
     position: relative;
     text-align: center;
 
     i {
       color: $default-color-white;
-      padding: 5px;
+      padding: 4px;
     }
 
     .prev-control:hover {
@@ -953,30 +1010,34 @@ a {
 
     .prev-control {
       background: none repeat scroll 0 0 #e4e5e5;
-      height: 30px;
-      left: 47%;
+      height: 26px;
+      left: 47.5%;
       position: absolute;
       top: 0;
-      width: 30px;
+      width: 26px;
     }
 
     .next-control {
       background: none repeat scroll 0 0 #e4e5e5;
-      height: 30px;
+      height: 26px;
       position: absolute;
-      right: 47%;
+      right: 47.4%;
       top: 0;
-      width: 30px;
+      width: 26px;
     }
   }
 
   .my-slides {
-    height: 265px;
+    height: 270px;
   }
 
   .my-slide {
     display: none;
     height: inherit;
+      
+    .button {
+      padding: 8px 32px 8px 20px;
+    }
 
     h2 {
       color: $default-color-pink;
@@ -1006,6 +1067,8 @@ a {
       }
 
       .item-img {
+        padding-left: 5px;
+        padding-top: 24px;
         display: inline-block;
         float: right;
         width: 47%;
@@ -1066,7 +1129,7 @@ a {
     p {
       color: #999;
       display: block;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       margin-top: 8px;
       text-transform: none;
     }
