--- a/css/style.css
+++ b/css/style.css
@@ -874,157 +874,161 @@ a {
       display: block;
       font-size: 45px;
       font-weight: 300;
+      margin-bottom: -5px;
       text-align: left; }
-      /* line 1049, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      /* line 1050, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .blog .my-slide h2 span {
         color: #000;
         font-size: 31px;
         font-weight: 300; }
-    /* line 1056, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1057, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .blog .my-slide .collumn {
       display: inline-block;
       float: left;
       height: inherit;
       width: 50%; }
-      /* line 1062, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      /* line 1063, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .blog .my-slide .collumn .item-text {
         display: inline-block;
         float: left;
         padding-right: 20px;
         width: 47%; }
-      /* line 1069, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      /* line 1070, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .blog .my-slide .collumn .item-img {
         padding-left: 5px;
         padding-top: 24px;
         display: inline-block;
         float: right;
         width: 47%; }
-        /* line 1076, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+        /* line 1077, D:/GIT/Aleksei_Rakitski/sass/style.scss */
         .blog .my-slide .collumn .item-img img {
           float: left;
           height: auto;
           max-height: 246px;
           max-width: 252px;
           width: auto; }
-  /* line 1087, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1088, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .blog .my-slide:first-child {
     display: block; }
 
-/* line 1094, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1095, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .months .right {
   border-bottom: 1px solid #d1d1d1;
   font-size: 12px;
   font-weight: bold;
   height: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
   padding-bottom: 20px; }
-  /* line 1102, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1103, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .months .right p {
     display: inline;
     float: left;
     width: 50%; }
-  /* line 1108, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1109, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .months .right span {
     display: inline;
     float: left;
     text-align: right;
     width: 50%; }
-    /* line 1114, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1115, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .months .right span i {
       color: #ff6766;
       font-size: 14px;
       padding: 0 5px; }
 
-/* line 1122, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1123, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .months .item-bottom-text {
   font-size: 13px; }
-  /* line 1125, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1126, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .months .item-bottom-text h4 {
-    font-weight: 600; }
-  /* line 1129, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    font-weight: 600;
+    line-height: 22px; }
+  /* line 1131, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .months .item-bottom-text p {
     color: #999;
     display: block;
-    margin-bottom: 30px;
-    margin-top: 8px;
+    margin-bottom: 31px;
+    margin-top: 7px;
     text-transform: none; }
 
-/* line 1141, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1143, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .testimonials {
-  padding: 95px 0; }
-  /* line 1144, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  padding: 80px 0; }
+  /* line 1146, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .testimonials .description {
     text-align: center; }
-    /* line 1147, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1149, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .description span {
       display: block;
       font-weight: bold; }
-  /* line 1153, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1155, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .testimonials .description .name {
-    font-size: 26px; }
-  /* line 1157, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    margin-top: 15px;
+    font-size: 18px; }
+  /* line 1160, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .testimonials .content {
     position: relative; }
-  /* line 1161, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1164, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .testimonials .my-slides {
-    height: 140px; }
-    /* line 1164, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    height: 170px; }
+    /* line 1167, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .my-slide {
       display: none;
       font-weight: 500;
       height: inherit; }
-    /* line 1170, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1173, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .fa {
       color: #fff; }
-    /* line 1174, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1177, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .fa-quote-left {
       margin-right: 15px; }
-    /* line 1178, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1181, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .fa-quote-right {
       margin-left: 15px; }
-    /* line 1182, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1185, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides p.description {
       color: #555;
       font-size: 17px;
       font-style: italic;
-      margin: 0 auto 40px;
+      margin: 37px auto 38px;
+      line-height: 27px;
       text-align: center;
       text-transform: none;
       width: 64%; }
-    /* line 1192, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1196, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .author-box {
       margin: 0 auto;
       overflow: hidden;
-      width: 22%; }
-      /* line 1197, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      width: 18.5%; }
+      /* line 1201, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .testimonials .my-slides .author-box img {
         float: left;
-        margin-right: 15px;
-        width: 15%; }
-    /* line 1204, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+        margin-right: 10px;
+        width: 17.4%; }
+    /* line 1208, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .author-text {
       float: left;
       text-align: left;
-      width: 79%; }
-      /* line 1209, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      width: 77%; }
+      /* line 1213, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .testimonials .my-slides .author-text h4 {
         color: #232323;
-        font-size: 16px;
+        font-size: 12px;
         font-weight: bold;
-        margin-bottom: 6px; }
-      /* line 1216, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+        margin-bottom: 5px; }
+      /* line 1220, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .testimonials .my-slides .author-text p {
         color: #777;
-        font-size: 12px;
+        font-size: 11px;
         text-transform: uppercase; }
-    /* line 1223, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1227, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .testimonials .my-slides .my-slide:first-child {
       display: block; }
 
-/* line 1231, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1235, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .brand-logos {
   padding: 10px 0; }
-  /* line 1234, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1238, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos h2 {
     color: #232323;
     float: left;
@@ -1032,7 +1036,7 @@ a {
     font-weight: bold;
     text-transform: uppercase;
     width: 9%; }
-  /* line 1243, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1247, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos .dotted-line {
     border-bottom: 1px dotted #232323;
     border-top: 1px dotted #232323;
@@ -1040,16 +1044,16 @@ a {
     height: 3px;
     margin-top: 9px;
     width: 86%; }
-  /* line 1252, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1256, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos .select {
     display: block;
     height: 18px;
     position: relative;
     text-align: center; }
-    /* line 1258, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1262, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .select i {
       font-weight: bold; }
-    /* line 1262, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1266, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .select .prev-control {
       background-color: transparent;
       color: #999;
@@ -1058,7 +1062,7 @@ a {
       position: relative;
       top: 0;
       width: 18px; }
-    /* line 1272, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1276, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .select .next-control {
       background-color: transparent;
       color: #999;
@@ -1067,105 +1071,106 @@ a {
       position: relative;
       top: 0;
       width: 18px; }
-    /* line 1282, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1286, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .select .prev-control:hover {
       color: #232323; }
-    /* line 1286, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1290, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .select .next-control:hover {
       color: #232323; }
-  /* line 1291, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1295, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos .description {
     margin-bottom: 60px; }
-  /* line 1295, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1299, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos .content {
     position: relative; }
-  /* line 1299, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1303, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .brand-logos .my-slides {
-    height: 120px; }
-    /* line 1302, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    height: 110px; }
+    /* line 1306, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .my-slides .my-slide {
       display: inline-block;
       float: left;
       height: inherit;
-      margin: 0 10px;
+      margin: 4px 10px;
       text-align: center;
       width: 175px; }
-    /* line 1311, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1315, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .my-slides .my-slide:nth-child(7) {
       display: none; }
-    /* line 1315, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1319, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .brand-logos .my-slides .my-slide:nth-child(8) {
       display: none; }
 
-/* line 1323, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1327, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .footer-top {
   background: none repeat scroll 0 0 #2a2a2a;
-  height: 32px;
-  padding: 18px 0; }
-  /* line 1328, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  height: 42px;
+  padding: 20px 0; }
+  /* line 1332, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .footer-top .newsletter-wrapper {
     float: left;
     width: 50%; }
-    /* line 1332, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1336, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .footer-top .newsletter-wrapper a {
       font-weight: 500; }
-      /* line 1335, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      /* line 1339, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .footer-top .newsletter-wrapper a i {
         margin-right: 5px; }
-    /* line 1340, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1344, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .footer-top .newsletter-wrapper input[type='text'] {
       background: none repeat scroll 0 0 #232323;
       border: medium none;
       color: #fff;
-      margin: 0 10px;
-      padding: 8px 15px;
+      margin: 4px 6px 0 30px;
+      padding: 12px 15px 8px 12px;
       width: 43%; }
-    /* line 1349, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1353, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .footer-top .newsletter-wrapper input[type='submit'] {
       background: none repeat scroll 0 0 #232323;
       border: 1px solid #fff;
       color: #fff;
       font-weight: 500;
-      padding: 7px 15px;
+      margin-top: -8px;
+      padding: 8px 15px;
       text-transform: uppercase; }
-  /* line 1359, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1364, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .footer-top .credit-cards {
     float: left;
     width: 50%; }
-    /* line 1363, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1368, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .footer-top .credit-cards a {
       display: inline-block;
       float: left;
-      margin: 0 5px; }
-      /* line 1368, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      margin: 5px 5px; }
+      /* line 1373, D:/GIT/Aleksei_Rakitski/sass/style.scss */
       .footer-top .credit-cards a img {
         height: 32px;
         width: auto; }
 
-/* line 1378, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1383, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 .site-map {
   background: none repeat scroll 0 0 #232323; }
-  /* line 1381, D:/GIT/Aleksei_Rakitski/sass/style.scss */
-  .site-map .wrapper {
-    height: 270px;
-    padding: 70px 0; }
   /* line 1386, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  .site-map .wrapper {
+    height: 258px;
+    padding: 70px 0; }
+  /* line 1391, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .site-map .collumn {
     float: left;
     padding: 0 15px;
     width: 22%; }
-    /* line 1391, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1396, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .site-map .collumn h5 {
       color: #cecece;
       font-size: 15px;
       font-weight: bold; }
-    /* line 1397, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1402, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .site-map .collumn .colorline {
       border-top: 1px solid #1a1a1a;
       margin-bottom: 30px;
       margin-top: 18px;
       position: relative; }
-    /* line 1404, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1409, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .site-map .collumn .colorline::after {
       border-top: 1px solid #b65050;
       content: '';
@@ -1173,38 +1178,42 @@ a {
       position: absolute;
       top: -1px;
       width: 52px; }
-    /* line 1413, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    /* line 1418, D:/GIT/Aleksei_Rakitski/sass/style.scss */
     .site-map .collumn address {
       color: #aaa;
       font-weight: 500;
-      line-height: 35px;
+      line-height: 28px;
       text-transform: none; }
-  /* line 1425, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1430, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   .site-map ul.navigation li a {
     color: #aaa;
     display: block;
     font-weight: 500;
-    padding: 7px 0;
+    padding: 5px 0;
     text-transform: none; }
-  /* line 1437, D:/GIT/Aleksei_Rakitski/sass/style.scss */
-  .site-map ul.social-links li {
-    display: inline;
-    margin-right: 5px; }
-    /* line 1441, D:/GIT/Aleksei_Rakitski/sass/style.scss */
-    .site-map ul.social-links li a {
-      background: none repeat scroll 0 0 #373737;
-      color: #aaa;
-      display: inline-block;
-      font-size: 14px;
-      height: 25px;
-      padding: 12px 0 0 13px;
-      width: 25px; }
+  /* line 1440, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  .site-map ul.social-links {
+    margin-left: 27px;
+    margin-top: 25px; }
+    /* line 1444, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+    .site-map ul.social-links li {
+      display: inline;
+      margin-right: 5px; }
+      /* line 1448, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+      .site-map ul.social-links li a {
+        background: none repeat scroll 0 0 #373737;
+        color: #aaa;
+        display: inline-block;
+        font-size: 14px;
+        height: 25px;
+        padding: 12px 0 0 13px;
+        width: 25px; }
 
-/* line 1456, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+/* line 1463, D:/GIT/Aleksei_Rakitski/sass/style.scss */
 footer .copyrights {
   background: none repeat scroll 0 0 #181818;
   padding: 18px 0; }
-  /* line 1460, D:/GIT/Aleksei_Rakitski/sass/style.scss */
+  /* line 1467, D:/GIT/Aleksei_Rakitski/sass/style.scss */
   footer .copyrights .wrapper {
     color: #fff;
     font-size: 12px;
