--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1044,6 +1044,7 @@ a {
       display: block;
       font-size: 45px;
       font-weight: 300;
+      margin-bottom: -5px;
       text-align: left;
 
       span {
@@ -1096,7 +1097,7 @@ a {
     font-size: 12px;
     font-weight: bold;
     height: 12px;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
     padding-bottom: 20px;
 
     p {
@@ -1124,13 +1125,14 @@ a {
 
     h4 {
       font-weight: 600;
+      line-height: 22px;
     }
 
     p {
       color: #999;
       display: block;
-      margin-bottom: 30px;
-      margin-top: 8px;
+      margin-bottom: 31px;
+      margin-top: 7px;
       text-transform: none;
     }
   }
@@ -1139,7 +1141,7 @@ a {
 //-----------TESTIMONIALS------------
 
 .testimonials {
-  padding: 95px 0;
+  padding: 80px 0;
 
   .description {
     text-align: center;
@@ -1151,7 +1153,8 @@ a {
   }
 
   .description .name {
-    font-size: 26px;
+    margin-top: 15px;
+    font-size: 18px;
   }
 
   .content {
@@ -1159,7 +1162,7 @@ a {
   }
 
   .my-slides {
-    height: 140px;
+    height: 170px;
 
     .my-slide {
       display: none;
@@ -1183,7 +1186,8 @@ a {
       color: #555;
       font-size: 17px;
       font-style: italic;
-      margin: 0 auto 40px;
+      margin: 37px auto 38px;
+      line-height: 27px;
       text-align: center;
       text-transform: none;
       width: 64%;
@@ -1192,30 +1196,30 @@ a {
     .author-box {
       margin: 0 auto;
       overflow: hidden;
-      width: 22%;
+      width: 18.5%;
 
       img {
         float: left;
-        margin-right: 15px;
-        width: 15%;
+        margin-right: 10px;
+        width: 17.4%;
       }
     }
 
     .author-text {
       float: left;
       text-align: left;
-      width: 79%;
+      width: 77%;
 
       h4 {
         color: #232323;
-        font-size: 16px;
+        font-size: 12px;
         font-weight: bold;
-        margin-bottom: 6px;
+        margin-bottom: 5px;
       }
 
       p {
         color: #777;
-        font-size: 12px;
+        font-size: 11px;
         text-transform: uppercase;
       }
     }
@@ -1297,13 +1301,13 @@ a {
   }
 
   .my-slides {
-    height: 120px;
+    height: 110px;
 
     .my-slide {
       display: inline-block;
       float: left;
       height: inherit;
-      margin: 0 10px;
+      margin: 4px 10px;
       text-align: center;
       width: 175px;
     }
@@ -1322,8 +1326,8 @@ a {
 
 .footer-top {
   background: none repeat scroll 0 0 #2a2a2a;
-  height: 32px;
-  padding: 18px 0;
+  height: 42px;
+  padding: 20px 0;
 
   .newsletter-wrapper {
     float: left;
@@ -1341,8 +1345,8 @@ a {
       background: none repeat scroll 0 0 #232323;
       border: medium none;
       color: $default-color-white;
-      margin: 0 10px;
-      padding: 8px 15px;
+      margin: 4px 6px 0 30px;
+      padding: 12px 15px 8px 12px;
       width: 43%;
     }
 
@@ -1351,7 +1355,8 @@ a {
       border: 1px solid $default-color-white;
       color: $default-color-white;
       font-weight: 500;
-      padding: 7px 15px;
+      margin-top: -8px;
+      padding: 8px 15px;
       text-transform: uppercase;
     }
   }
@@ -1363,7 +1368,7 @@ a {
     a {
       display: inline-block;
       float: left;
-      margin: 0 5px;
+      margin: 5px 5px;
 
       img {
         height: 32px;
@@ -1379,7 +1384,7 @@ a {
   background: none repeat scroll 0 0 #232323;
 
   .wrapper {
-    height: 270px;
+    height: 258px;
     padding: 70px 0;
   }
 
@@ -1413,7 +1418,7 @@ a {
     address {
       color: #aaa;
       font-weight: 500;
-      line-height: 35px;
+      line-height: 28px;
       text-transform: none;
     }
   }
@@ -1426,13 +1431,15 @@ a {
         color: #aaa;
         display: block;
         font-weight: 500;
-        padding: 7px 0;
+        padding: 5px 0;
         text-transform: none;
        }
     }
   }
 
   ul.social-links {
+    margin-left: 27px;
+    margin-top: 25px;
 
     li {
       display: inline;
